# engram

./: .gitignore  LICENSE  config.example.toml  pyproject.toml
.githooks/: commit-msg
extension/: README.md  background.js  manifest.json  popup.html  popup.js
src/engram/: __init__.py  anki.py  app.py  capture.py  config.py  cookie_bridge.py  costs.py  hotkey.py  ingest.py  logging_setup.py  models.py  router.py  snap.py  transcript.py  validators.py
src/engram/llm/: __init__.py  anthropic_client.py  base.py  fake.py  openai_client.py
src/engram/ui/: approval.py  picker.py  theme.py
tests/: test_anki.py  test_approval_gate.py  test_config.py  test_cookie_bridge.py  test_costs.py  test_deck.py  test_ingest.py  test_integration_flow.py  test_llm_parsing.py  test_models_validation.py  test_router.py  test_snap.py  test_transcript.py  test_validators.py
